# harlequin-wherobots

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml
harlequin_wherobots/: __init__.py  adapter.py  cli_options.py  options.py
tests/: test_get_table_schema.py
