[tool.poetry]
name = "harlequin-wherobots"
version = "0.1.0"
description = ""
authors = ["Maxime Petazzoni <max@wherobots.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
harlequin = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
