[project]
name = "harlequin-wherobots"
version = "0.7.0"
description = "Harlequin adapter for Wherobots' Spatial SQL API"
authors = [{ name = "Maxime Petazzoni", email = "max@wherobots.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
dependencies = [
    "harlequin",
    "packaging>=25.0",
    "wherobots-python-dbapi",
]

[project.entry-points."harlequin.adapter"]
wherobots = "harlequin_wherobots:HarlequinWherobotsAdapter"

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
